--- a/popup.html
+++ b/popup.html
@@ -79,8 +79,15 @@
       border-color: #4285f4;
       box-shadow: 0 0 0 2px rgba(66,133,244,0.2);
     }
+    .button-container {
+      display: flex;
+      justify-content: flex-end;
+      gap: 10px;
+      margin-top: 15px;
+    }
     #downloadBtn, #clearBtn {
       display: none;
+      margin-bottom: 0;
     }
     #downloadBtn {
       background-color: #34a853;
@@ -136,7 +143,7 @@
   <div id="summary">
     <p>Click the button to summarize the current webpage.</p>
   </div>
-  <div style="text-align: right; margin-top: 10px;">
+  <div class="button-container">
     <button id="downloadBtn">Download Summary</button>
   </div>
   <script type="module" src="popup.js"></script>
